--- a/WebContent/views/desktop/datos/parametros/capacitacion/CapacitacionFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/capacitacion/CapacitacionFormBasic.zul
@@ -13,6 +13,7 @@
 						value="@bind(vm.capacitacion.nombre)">
 					</textbox>
 				</div>
+				<span style="cursor: help" sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_nombre, position=after_end"/>
 			</div>
 
 			<div class="col s12">
@@ -29,6 +30,7 @@
 						</template>
 					</combobox>
 				</div>
+				<span style="cursor: help" sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_clasificador, position=after_end"/>
 			</div>
 
 			<div sclass="col s12">
@@ -39,9 +41,35 @@
 						value="@bind(vm.capacitacion.descripcion)">
 					</textbox>
 				</div>
+				<span style="cursor: help" sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_descripcion, position=after_end"/>
 			</div>
 
 		</div>
+		
+		
+		<popup id="pop_nombre" width="200px">
+        	<html><![CDATA[
+            	Por favor, indique el nombre de la capacitación que desea 
+            	registrar.<br /><font color="#3b85a1">Ejemplo: Actividades post-tratamiento.</font>
+        	]]></html>
+    	</popup>
+    	
+    	<popup id="pop_clasificador" width="200px">
+        	<html><![CDATA[
+            	Por favor, indique un clasificador para la capacitación que desea
+            	registrar.<br /><font color="#3b85a1">Ejemplo:Actividades.</font>
+        	]]></html>
+    	</popup>
+    	
+    	<popup id="pop_descripcion" width="200px">
+        	<html><![CDATA[
+            	Por favor, indique una descripción breve, sobre la capacitación que desea
+            	registrar.<br /><font color="#3b85a1">Ejemplo:Taller de actividades especiales
+            	post-tratamiento para voluntarios.</font>
+        	]]></html>
+    	</popup>
+		
+		
 		<div id="divButtonsForm"
 			use="karen.core.form.buttons.containers.DivButtonsForm">
 		</div>
