--- a/WebContent/views/desktop/datos/parametros/cargo/CargoFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/cargo/CargoFormBasic.zul
@@ -13,6 +13,7 @@
 						value="@bind(vm.cargo.nombre)">
 					</textbox>
 				</div>
+				<span style="cursor: help" sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_nombre, position=after_end"/>
 			</div>
 
 			<div sclass="col s12">
@@ -23,9 +24,28 @@
 						value="@bind(vm.cargo.descripcion)">
 					</textbox>
 				</div>
+				<span style="cursor: help" sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_descripcion, position=after_end"/>
 			</div>
 
 		</div>
+		
+		
+		<popup id="pop_nombre" width="200px">
+        	<html><![CDATA[
+            	Por favor, indique el nombre del cargo que desea 
+            	registrar.<br /><font color="#3b85a1">Ejemplo:Lider Juvenil</font>
+        	]]></html>
+    	</popup>
+    	
+    	<popup id="pop_descripcion" width="200px">
+        	<html><![CDATA[
+            	Por favor, indique una descripción breve, sobre el cargo que desea
+            	registrar.<br /><font color="#3b85a1">Ejemplo:Encargado de la orientación
+            	del personal joven de la organización.</font>
+        	]]></html>
+    	</popup>
+		
+		
 		<div id="divButtonsForm"
 			use="karen.core.form.buttons.containers.DivButtonsForm">
 		</div>
