--- a/WebContent/views/desktop/datos/parametros/ciudad/CiudadFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/ciudad/CiudadFormBasic.zul
@@ -13,6 +13,7 @@
 						value="@bind(vm.ciudad.nombre)">
 					</textbox>
 				</div>
+				<span style="cursor: help" sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_nombre, position=after_end"/>
 			</div>
 
 			<div class="col s12">
@@ -28,9 +29,27 @@
 						</template>
 					</combobox>
 				</div>
+				<span style="cursor: help" sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_estado, position=after_end"/>
 			</div>
 
 		</div>
+		
+		
+		<popup id="pop_nombre" width="200px">
+        	<html><![CDATA[
+            	Por favor, indique el nombre de la ciudad que desea 
+            	registrar.<br /><font color="#3b85a1">Ejemplo: Barquisimeto.</font>
+        	]]></html>
+    	</popup>
+    	
+    	<popup id="pop_estado" width="200px">
+        	<html><![CDATA[
+            	Por favor, indique el estado al que pertenece la ciudad que desea
+            	registrar.<br /><font color="#3b85a1">Ejemplo:Lara.</font>
+        	]]></html>
+    	</popup>
+    	
+    	
 		<div id="divButtonsForm"
 			use="karen.core.form.buttons.containers.DivButtonsForm">
 		</div>
