--- a/WebContent/views/desktop/datos/parametros/actividad/ActividadFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/actividad/ActividadFormBasic.zul
@@ -13,6 +13,7 @@
 						value="@bind(vm.actividad.nombre)">
 					</textbox>
 				</div>
+				<span style="cursor: help" sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_nombre, position=after_end"/>
 			</div>
 
 			<div sclass="col s12">
@@ -29,6 +30,7 @@
 						</template>
 					</combobox>
 				</div>
+				<span style="cursor: help" sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_clasificador, position=after_end"/>
 			</div>
 
 			<div class="col s12">
@@ -39,8 +41,33 @@
 						value="@bind(vm.actividad.descripcion)">
 					</textbox>
 				</div>
+				<span style="cursor: help" sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_descripcion, position=after_end"/>
 			</div>
 		</div>
+		
+		
+		<popup id="pop_nombre" width="200px">
+        	<html><![CDATA[
+            	Por favor, indique el nombre de la actividad que desea 
+            	registrar.<br /><font color="#3b85a1">Ejemplo: Organizar visitas a la escuelita.</font>
+        	]]></html>
+    	</popup>
+    	
+    	<popup id="pop_clasificador" width="200px">
+        	<html><![CDATA[
+            	Por favor, indique un clasificador para la actividad que desea
+            	registrar.<br /><font color="#3b85a1">Ejemplo:Visitas.</font>
+        	]]></html>
+    	</popup>
+    	
+    	<popup id="pop_descripcion" width="200px">
+        	<html><![CDATA[
+            	Por favor, indique una descripción breve, sobre la actividad que desea
+            	registrar.<br /><font color="#3b85a1">Ejemplo:Organizar el orden de las 
+            	visitas correspondientes a la escuelita del hospital.</font>
+        	]]></html>
+    	</popup>
+		
 
 		<div id="divButtonsForm"
 			use="karen.core.form.buttons.containers.DivButtonsForm">
