--- a/WebContent/views/desktop/datos/parametros/ayuda/AyudaFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/ayuda/AyudaFormBasic.zul
@@ -13,6 +13,7 @@
 						value="@bind(vm.ayuda.nombre)">
 					</textbox>
 				</div>
+				<span style="cursor: help" sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_nombre, position=after_end"/>
 			</div>
 			
 			<div class="col s12">
@@ -23,8 +24,24 @@
 						value="@bind(vm.ayuda.descripcion)">
 					</textbox>
 				</div>
+				<span style="cursor: help" sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_descripcion, position=after_end"/>
 			</div>			
 		</div>
+		
+		<popup id="pop_nombre" width="200px">
+        	<html><![CDATA[
+            	Por favor, indique el nombre de la ayuda que desea 
+            	registrar.<br /><font color="#3b85a1">Ejemplo: Charla espiritual.</font>
+        	]]></html>
+    	</popup>
+    	
+    	<popup id="pop_descripcion" width="200px">
+        	<html><![CDATA[
+            	Por favor, indique una descripción breve, sobre la ayuda que desea
+            	registrar.<br /><font color="#3b85a1">Ejemplo:Realizar una charla de crecimiento
+            	espiritual para los niños de la escuelita del hospital.</font>
+        	]]></html>
+    	</popup>
 		
 		<div id="divButtonsForm"
 			use="karen.core.form.buttons.containers.DivButtonsForm">
