--- a/WebContent/views/desktop/datos/parametros/patrocinador/PatrocinadorFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/patrocinador/PatrocinadorFormBasic.zul
@@ -8,142 +8,232 @@
 
 		<div class="row">
 			<div sclass="col s12 form">
-			
-				<tabbox id="tb" class="rtab">
+
+				<tabbox id="tb" class="rtab ltab">
 					<tabs id="tabs">
-						<tab id="tabDatosPersonales" label="Datos principales" selected="true" />
-						<tab id="tabContacto" label="Información de contacto" />
+						<tab id="tabDatosPersonales"
+							label="Datos principales" selected="true" />
+						<tab id="tabContacto"
+							label="Información de contacto" />
 					</tabs>
 
 					<tabpanels>
 						<tabpanel>
-			
+
 							<div class="input-field col s6">
-								<n:label for="nombre">Nombre</n:label>
-								<textbox id="nombre" type="text" value="@bind(vm.patrocinador.fkPersona.nombre)"> </textbox>
-							</div>
-				
-							<div class="input-field col s6">
-								<n:label for="apellido">Apellido</n:label>
-								<textbox id="apellido" type="text" value="@bind(vm.patrocinador.fkPersona.apellido)"> </textbox>
-							</div>
-							
-							<div class="input-field col s6">
-								<n:label for="tipo_persona" class="active">Tipo de persona</n:label>
-								<combobox id="tipo_persona" readonly="true" model="@bind(vm.tipoPersonaEnums)" selectedItem="@bind(vm.patrocinador.fkPersona.tipoPersona)">
+								<n:label for="tipo_persona"
+									class="active">
+									Tipo de persona
+								</n:label>
+								<combobox id="tipo_persona"
+									readonly="true" model="@bind(vm.tipoPersonaEnums)"
+									selectedItem="@bind(vm.tipoPersonaEnum)">
 									<template name="model">
 										<comboitem label="@load(each)" />
 									</template>
-								</combobox>	
+								</combobox>
 							</div>
-				
+
 							<div class="input-field col s6">
-								<n:label for="identificacion">Cédula o RIF</n:label>
-								<textbox id="identificacion" type="text" value="@bind(vm.patrocinador.fkPersona.identificacion)"> </textbox>
+								<n:label for="identificacion">
+									Cédula/RIF
+								</n:label>
+								<textbox id="identificacion" type="text"
+									value="@bind(vm.persona.identificacion)">
+								</textbox>
 							</div>
-							
+
 							<div class="input-field col s6">
-								<n:label class="active" for="fk_estado"> Ciudad </n:label>
-								<combobox id="fk_ciudad" readonly="true" model="@bind(vm.ciudades)" selectedItem="@bind(vm.patrocinador.fkPersona.fkCiudad)">
-									<template name="model">
-										<comboitem label="@load(each.nombre)" />
+								<n:label for="nombre">Nombre</n:label>
+								<textbox id="nombre" type="text"
+									value="@bind(vm.persona.nombre)">
+								</textbox>
+							</div>
+
+							<div class="input-field col s6">
+								<n:label for="apellido">
+									Apellido
+								</n:label>
+								<textbox id="apellido" type="text"
+									value="@bind(vm.persona.apellido)">
+								</textbox>
+							</div>
+
+							<div class="input-field col s6">
+								<n:label for="sexo" class="active">
+									Sexo
+								</n:label>
+								<combobox id="sexo" readonly="true"
+									model="@bind(vm.sexoEnums)"
+									selectedItem="@bind(vm.sexoEnum)">
+									<template name="model" var="sexo">
+										<comboitem label="@bind(sexo)" />
 									</template>
 								</combobox>
 							</div>
-							
+
 							<div class="input-field col s6">
-								<n:label for="sexo" class="active">Sexo</n:label>
-								<combobox id="sexo" readonly="true" selectedItem="@bind(vm.patrocinador.fkPersona.sexo)">
-									<comboitem label="Masculino" />
-									<comboitem label="Femenino" />
-								</combobox>	
+								<n:label for="fecha_nacimiento"
+									class="active">
+									Fecha de nacimiento
+								</n:label>
+								<datebox id="db" cols="20"
+									readonly="true" format="dd/MM/yyyy"
+									value="@bind(vm.fechaNacimiento)" />
 							</div>
-				
+
 							<div class="input-field col s6">
-								<n:label for="fecha_nacimiento" class="active">Fecha de nacimiento</n:label>
-								<datebox id="db" cols="20" format="yyyy/MM/dd" value="@bind(vm.patrocinador.fkPersona.fechaNacimiento)"/>
+								<n:label class="active"
+									for="fk_estado">
+									Estado
+								</n:label>
+								<combobox id="fk_estado" readonly="true"
+									placeholder="Seleccione un Estado" instant="true"
+									onSelect="@command('changeEstado')" model="@bind(vm.estados)"
+									selectedItem="@bind(vm.estado)">
+									<template name="model">
+										<comboitem
+											label="@load(each.nombre)" />
+									</template>
+								</combobox>
 							</div>
-							
+
 							<div class="input-field col s6">
-								<n:label for="direccion">Dirección</n:label>
-								<textbox id="direccion" type="text" value="@bind(vm.patrocinador.fkPersona.direccion)"> </textbox>
+								<n:label class="active"
+									for="fk_ciudad">
+									Ciudad
+								</n:label>
+								<combobox id="fk_ciudad" readonly="true"
+									placeholder="Seleccione una ciudad"
+									disabled="@load(empty vm.ciudades)" model="@bind(vm.ciudades)"
+									selectedItem="@bind(vm.persona
+									.fkCiudad)">
+									<template name="model">
+										<comboitem
+											label="@load(each.nombre)" />
+									</template>
+								</combobox>
 							</div>
-				
-							<div class="input-field col s6">
-								<n:label for="fecha_ingreso" class="active">Fecha de ingreso</n:label>
-								<datebox id="fecha_ingreso" cols="20" format="yyyy/MM/dd" value="@bind(vm.patrocinador.fechaIngreso)"/>
-							</div>
-				
-							<div class="input-field col s6">
-								<n:label for="fecha_egreso" class="active">Fecha de egreso</n:label>
-								<datebox id="fecha_egreso" cols="20" format="yyyy/MM/dd" value="@bind(vm.patrocinador.fechaSalida)"/>
-							</div>
-												
-							<div class="col s12">
+
+
+							<div class="col s6" style="padding:0px">
 								<div class="input-field col s12">
-									<uploadImageSingle maxsize="9000" size="200" idUpload="1" title="Imagen del patrocinador" />
+									<n:label for="fecha_ingreso"
+										class="active">
+										Fecha de ingreso
+									</n:label>
+									<datebox id="fecha_ingreso"
+										cols="20" format="dd/MM/yyyy" readonly="true"
+										value="@bind(vm.fechaIngreso)" />
+								</div>
+
+								<div class="input-field col s12">
+									<n:label for="direccion">
+										Dirección
+									</n:label>
+									<textbox id="direccion" type="text"
+										sclass="materialize-textarea" multiline="true"
+										value="@bind(vm.persona.direccion)">
+									</textbox>
 								</div>
 							</div>
-						
+							<div class="col s6" style="padding:0px;">
+								<div class="input-field col s12">
+									<uploadImageSingle maxsize="9000"
+										size="200" idUpload="1" title="Imagen del patrocinador" />
+								</div>
+							</div>
 						</tabpanel>
-						
+
 						<tabpanel>
-						
+
 							<div class="input-field col s6">
-								<n:label for="telefono_1">Teléfono 1</n:label>
-								<textbox id="telefono_1" type="text" value="@bind(vm.patrocinador.fkPersona.telefono1)"> </textbox>
+								<n:label for="telefono_1">
+									Teléfono 1
+								</n:label>
+								<textbox id="telefono_1" type="text"
+									value="@bind(vm.persona.telefono1)">
+								</textbox>
 							</div>
-				
+
 							<div class="input-field col s6">
-								<n:label for="telefono_2">Teléfono 2</n:label>
-								<textbox id="telefono_2" type="text" value="@bind(vm.patrocinador.fkPersona.telefono2)"> </textbox>
+								<n:label for="telefono_2">
+									Teléfono 2
+								</n:label>
+								<textbox id="telefono_2" type="text"
+									value="@bind(vm.persona.telefono2)">
+								</textbox>
 							</div>
-							
+
 							<div class="input-field col s6">
 								<n:label for="fax">Fax</n:label>
-								<textbox id="fax" type="text" value="@bind(vm.patrocinador.fkPersona.fax)"> </textbox>
+								<textbox id="fax" type="text"
+									value="@bind(vm.persona.fax)">
+								</textbox>
 							</div>
-							
+
 							<div class="input-field col s6">
-								<n:label for="correo">Correo electrónico</n:label>
-								<textbox id="correo" type="text" value="@bind(vm.patrocinador.fkPersona.correo)"> </textbox>
+								<n:label for="correo">
+									Correo electrónico
+								</n:label>
+								<textbox id="correo" type="text"
+									value="@bind(vm.persona.correo)">
+								</textbox>
 							</div>
-											
+
 							<div class="input-field col s6">
 								<n:label for="twitter">Twitter</n:label>
-								<textbox id="twitter" type="text" value="@bind(vm.patrocinador.fkPersona.twitter)"> </textbox>
+								<textbox id="twitter" type="text"
+									value="@bind(vm.persona.twitter)">
+								</textbox>
 							</div>
-				
+
 							<div class="input-field col s6">
-								<n:label for="instagram">Instagram</n:label>
-								<textbox id="instagram" type="text" value="@bind(vm.patrocinador.fkPersona.instagram)"> </textbox>
+								<n:label for="instagram">
+									Instagram
+								</n:label>
+								<textbox id="instagram" type="text"
+									value="@bind(vm.persona.instagram)">
+								</textbox>
 							</div>
-							
+
 							<div class="input-field col s6">
-								<n:label for="facebook">Facebook</n:label>
-								<textbox id="facebook" type="text" value="@bind(vm.patrocinador.fkPersona.facebook)"> </textbox>
+								<n:label for="facebook">
+									Facebook
+								</n:label>
+								<textbox id="facebook" type="text"
+									value="@bind(vm.persona.facebook)">
+								</textbox>
 							</div>
-				
+
 							<div class="input-field col s6">
-								<n:label for="linkedin">LinkedIn</n:label>
-								<textbox id="linkedin" type="text" value="@bind(vm.patrocinador.fkPersona.linkedin)"> </textbox>
+								<n:label for="linkedin">
+									LinkedIn
+								</n:label>
+								<textbox id="linkedin" type="text"
+									value="@bind(vm.persona.linkedin)">
+								</textbox>
 							</div>
-							
+
 							<div class="input-field col s6">
-								<n:label for="sitioWeb">Sitio web</n:label>
-								<textbox id="sitioWeb" type="text" value="@bind(vm.patrocinador.fkPersona.sitioWeb)"> </textbox>
+								<n:label for="sitioWeb">
+									Sitio web
+								</n:label>
+								<textbox id="sitioWeb" type="text"
+									value="@bind(vm.persona.sitioWeb)">
+								</textbox>
 							</div>
 
 						</tabpanel>
-					
+
 					</tabpanels>
-				
+
 				</tabbox>
-				
-				
+
+
 			</div>
 		</div>
-		
+
 		<div id="divButtonsForm"
 			use="karen.core.form.buttons.containers.DivButtonsForm">
 		</div>
