--- a/WebContent/assets/css/web/conocenos.css
+++ b/WebContent/assets/css/web/conocenos.css
@@ -19,7 +19,6 @@
 
 .cont-org{
 	width: 100%;
-	height: 480px;
 	background-color: #F0F2DC;
 }
 
@@ -33,6 +32,7 @@
 
 .tam-cont-org{
 	width: 70%;
+	margin-bottom: 0px;
 }
 
 .img-cont-org{
