Actualizacion de las ayudas, se quito la etiqueta Style

--- a/WebContent/views/desktop/datos/parametros/capacitacion/CapacitacionFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/capacitacion/CapacitacionFormBasic.zul
@@ -13,7 +13,7 @@
 						value="@bind(vm.capacitacion.nombre)">
 					</textbox>
 				</div>
-				<span style="cursor: help" sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_nombre, position=after_end"/>
+				<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_nombre, position=after_end"/>
 			</div>
 
 			<div class="col s12">
@@ -30,7 +30,7 @@
 						</template>
 					</combobox>
 				</div>
-				<span style="cursor: help" sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_clasificador, position=after_end"/>
+				<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_clasificador, position=after_end"/>
 			</div>
 
 			<div sclass="col s12">
@@ -41,7 +41,7 @@
 						value="@bind(vm.capacitacion.descripcion)">
 					</textbox>
 				</div>
-				<span style="cursor: help" sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_descripcion, position=after_end"/>
+				<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_descripcion, position=after_end"/>
 			</div>
 
 		</div>
