--- a/WebContent/views/desktop/datos/parametros/ciudad/CiudadFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/ciudad/CiudadFormBasic.zul
@@ -13,7 +13,7 @@
 						value="@bind(vm.ciudad.nombre)">
 					</textbox>
 				</div>
-				<span style="cursor: help" sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_nombre, position=after_end"/>
+				<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_nombre, position=after_end"/>
 			</div>
 
 			<div class="col s12">
@@ -29,7 +29,7 @@
 						</template>
 					</combobox>
 				</div>
-				<span style="cursor: help" sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_estado, position=after_end"/>
+				<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_estado, position=after_end"/>
 			</div>
 
 		</div>
