--- a/WebContent/views/desktop/datos/parametros/clasificador/actividad/ClasificadorActividadFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/clasificador/actividad/ClasificadorActividadFormBasic.zul
@@ -13,7 +13,7 @@
 						value="@bind(vm.clasificadorActividad.nombre)">
 					</textbox>
 				</div>
-				<span style="cursor: help" sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_nombre, position=after_end"/>
+				<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_nombre, position=after_end"/>
 			</div>
 
 		</div>
