--- a/WebContent/views/desktop/datos/parametros/clasificador/sugerencia/ClasificadorSugerenciaFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/clasificador/sugerencia/ClasificadorSugerenciaFormBasic.zul
@@ -13,7 +13,7 @@
 						value="@bind(vm.clasificadorSugerencia.nombre)">
 					</textbox>
 				</div>
-				<span style="cursor: help" sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_nombre, position=after_end"/>
+				<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_nombre, position=after_end"/>
 			</div>
 		</div>
 		
@@ -21,7 +21,7 @@
 		<popup id="pop_nombre" width="200px">
         	<html><![CDATA[
             	Por favor, indique el nombre del clasificador que desea 
-            	registrar.<br /><font color="#3b85a1">Ejemplo: Crítica.</font>
+            	registrar.<br /><font color="#3b85a1">Ejemplo: Comentario.</font>
         	]]></html>
     	</popup>
     	
