--- a/WebContent/views/desktop/datos/parametros/cargo/CargoFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/cargo/CargoFormBasic.zul
@@ -13,7 +13,7 @@
 						value="@bind(vm.cargo.nombre)">
 					</textbox>
 				</div>
-				<span style="cursor: help" sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_nombre, position=after_end"/>
+				<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_nombre, position=after_end"/>
 			</div>
 
 			<div sclass="col s12">
@@ -24,7 +24,7 @@
 						value="@bind(vm.cargo.descripcion)">
 					</textbox>
 				</div>
-				<span style="cursor: help" sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_descripcion, position=after_end"/>
+				<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_descripcion, position=after_end"/>
 			</div>
 
 		</div>
