--- a/WebContent/views/desktop/datos/parametros/clasificador/evento/ClasificadorEventoFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/clasificador/evento/ClasificadorEventoFormBasic.zul
@@ -13,7 +13,7 @@
 						value="@bind(vm.clasificadorEvento.nombre)">
 					</textbox>
 				</div>
-				<span style="cursor: help" sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_nombre, position=after_end"/>
+				<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_nombre, position=after_end"/>
 			</div>
 
 
@@ -26,7 +26,7 @@
 						value="@bind(vm.clasificadorEvento.color)">
 					</colorbox>
 				</div>
-				<span style="cursor: help" sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_color, position=after_end"/>
+				<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_color, position=after_end"/>
 			</div>
 
 		</div>
